EPBDS-14233 Replace deprecation in Java 11