@@ -151,18 +151,18 @@ public class DatesTest {
         final Date start = getDate(28, 3, 2012);
         final Date end = getDate(29, 3, 2013);
 
-        assertEquals(new Double(366), Dates.dateDif(start, end, "D"));
-        assertEquals(new Double(52), Dates.dateDif(start, end, "W"));
-        assertEquals(new Double(12), Dates.dateDif(start, end, "M"));
-        assertEquals(new Double(1), Dates.dateDif(start, end, "Y"));
-        assertEquals(new Double(1), Dates.dateDif(start, end, "MD"));
-        assertEquals(new Double(1), Dates.dateDif(start, end, "YD"));
+        assertEquals(Double.valueOf(366), Dates.dateDif(start, end, "D"));
+        assertEquals(Double.valueOf(52), Dates.dateDif(start, end, "W"));
+        assertEquals(Double.valueOf(12), Dates.dateDif(start, end, "M"));
+        assertEquals(Double.valueOf(1), Dates.dateDif(start, end, "Y"));
+        assertEquals(Double.valueOf(1), Dates.dateDif(start, end, "MD"));
+        assertEquals(Double.valueOf(1), Dates.dateDif(start, end, "YD"));
         assertEquals(ZERO_DOUBLE, Dates.dateDif(start, end, "YM"));
 
-        assertEquals(new Double(10), Dates.dateDif(start, getDate(27, 2, 2013), "M"));
-        assertEquals(new Double(2), Dates.dateDif(start, getDate(27, 1, 2015), "Y"));
-        assertEquals(new Double(23), Dates.dateDif(start, getDate(20, 1, 2015), "MD"));
-        assertEquals(new Double(298), Dates.dateDif(start, getDate(20, 1, 2015), "YD"));
+        assertEquals(Double.valueOf(10), Dates.dateDif(start, getDate(27, 2, 2013), "M"));
+        assertEquals(Double.valueOf(2), Dates.dateDif(start, getDate(27, 1, 2015), "Y"));
+        assertEquals(Double.valueOf(23), Dates.dateDif(start, getDate(20, 1, 2015), "MD"));
+        assertEquals(Double.valueOf(298), Dates.dateDif(start, getDate(20, 1, 2015), "YD"));
         assertEquals(ZERO_DOUBLE, Dates.dateDif(getDate(31, 1, 2013), getDate(1, 3, 2013), "MD"));
     }
 
@@ -171,12 +171,12 @@ public class DatesTest {
         final Date start = getDate(28, 3, 2012);
         final Date end = getDate(29, 3, 2013);
 
-        assertEquals(new Double(-366), Dates.dateDif(end, start, "D"));
-        assertEquals(new Double(-52), Dates.dateDif(end, start, "W"));
-        assertEquals(new Double(-12), Dates.dateDif(end, start, "M"));
-        assertEquals(new Double(-1), Dates.dateDif(end, start, "Y"));
-        assertEquals(new Double(-1), Dates.dateDif(end, start, "MD"));
-        assertEquals(new Double(-1), Dates.dateDif(end, start, "YD"));
+        assertEquals(Double.valueOf(-366), Dates.dateDif(end, start, "D"));
+        assertEquals(Double.valueOf(-52), Dates.dateDif(end, start, "W"));
+        assertEquals(Double.valueOf(-12), Dates.dateDif(end, start, "M"));
+        assertEquals(Double.valueOf(-1), Dates.dateDif(end, start, "Y"));
+        assertEquals(Double.valueOf(-1), Dates.dateDif(end, start, "MD"));
+        assertEquals(Double.valueOf(-1), Dates.dateDif(end, start, "YD"));
         assertEquals(ZERO_DOUBLE, Dates.dateDif(end, start, "YM"));
     }
 
@@ -185,12 +185,12 @@ public class DatesTest {
         final Date start = getDate(28, 3, 2012);
         final Date end = getDate(29, 3, 2013);
 
-        assertEquals(new Double(52.285714285714285d), Dates.dateDif(start, end, "WF"));
-        assertEquals(new Double(12.03225806451613d), Dates.dateDif(start, end, "MF"));
-        assertEquals(new Double(1.0027397260273974d), Dates.dateDif(start, end, "YF"));
-        assertEquals(new Double(0.03225806451612903d), Dates.dateDif(start, end, "YMF"));
-        assertEquals(new Double(10.967741935483872), Dates.dateDif(start, getDate(27, 2, 2013), "MF"));
-        assertEquals(new Double(2.8356164383561646), Dates.dateDif(start, getDate(27, 1, 2015), "YF"));
+        assertEquals(Double.valueOf(52.285714285714285d), Dates.dateDif(start, end, "WF"));
+        assertEquals(Double.valueOf(12.03225806451613d), Dates.dateDif(start, end, "MF"));
+        assertEquals(Double.valueOf(1.0027397260273974d), Dates.dateDif(start, end, "YF"));
+        assertEquals(Double.valueOf(0.03225806451612903d), Dates.dateDif(start, end, "YMF"));
+        assertEquals(Double.valueOf(10.967741935483872), Dates.dateDif(start, getDate(27, 2, 2013), "MF"));
+        assertEquals(Double.valueOf(2.8356164383561646), Dates.dateDif(start, getDate(27, 1, 2015), "YF"));
     }
 
     @Test
@@ -198,10 +198,10 @@ public class DatesTest {
         final Date start = getDate(28, 3, 2012);
         final Date end = getDate(29, 3, 2013);
 
-        assertEquals(new Double(-52.285714285714285d), Dates.dateDif(end, start, "WF"));
-        assertEquals(new Double(-12.03225806451613d), Dates.dateDif(end, start, "MF"));
-        assertEquals(new Double(-1.0027397260273974d), Dates.dateDif(end, start, "YF"));
-        assertEquals(new Double(-0.03225806451612903d), Dates.dateDif(end, start, "YMF"));
+        assertEquals(Double.valueOf(-52.285714285714285d), Dates.dateDif(end, start, "WF"));
+        assertEquals(Double.valueOf(-12.03225806451613d), Dates.dateDif(end, start, "MF"));
+        assertEquals(Double.valueOf(-1.0027397260273974d), Dates.dateDif(end, start, "YF"));
+        assertEquals(Double.valueOf(-0.03225806451612903d), Dates.dateDif(end, start, "YMF"));
     }
 
     @Test
