@@ -19,25 +19,25 @@ public class SimpleDTTest {
 
     @Test
     public void testLookup1D() {
-        assertEquals(new Double(0.02),
+        assertEquals(Double.valueOf(0.02),
             TestUtils.invoke(instance, "simple", new Class[] { int.class, String.class }, new Object[] { 2, "v2" }));
-        assertEquals(new Double(0.05),
+        assertEquals(Double.valueOf(0.05),
             TestUtils.invoke(instance, "simple", new Class[] { int.class, String.class }, new Object[] { 5, "v5" }));
     }
 
     @Test
     public void testLookup2D2params() {
-        assertEquals(new Double(0.01),
+        assertEquals(Double.valueOf(0.01),
             TestUtils.invoke(instance,
                 "simple2D2params",
                 new Class[] { int.class, String.class },
                 new Object[] { 1, "v1" }));
-        assertEquals(new Double(0.09),
+        assertEquals(Double.valueOf(0.09),
             TestUtils.invoke(instance,
                 "simple2D2params",
                 new Class[] { int.class, String.class },
                 new Object[] { 3, "v2" }));
-        assertEquals(new Double(0.17),
+        assertEquals(Double.valueOf(0.17),
             TestUtils.invoke(instance,
                 "simple2D2params",
                 new Class[] { int.class, String.class },
@@ -46,22 +46,22 @@ public class SimpleDTTest {
 
     @Test
     public void testLookup2D3params() {
-        assertEquals(new Double(0.01),
+        assertEquals(Double.valueOf(0.01),
             TestUtils.invoke(instance,
                 "simple2D3params",
                 new Class[] { int.class, String.class, String.class },
                 new Object[] { 1, "v1", "v1" }));
-        assertEquals(new Double(0.08),
+        assertEquals(Double.valueOf(0.08),
             TestUtils.invoke(instance,
                 "simple2D3params",
                 new Class[] { int.class, String.class, String.class },
                 new Object[] { 2, "v1", "v2" }));
-        assertEquals(new Double(0.15),
+        assertEquals(Double.valueOf(0.15),
             TestUtils.invoke(instance,
                 "simple2D3params",
                 new Class[] { int.class, String.class, String.class },
                 new Object[] { 3, "v2", "v1" }));
-        assertEquals(new Double(0.22),
+        assertEquals(Double.valueOf(0.22),
             TestUtils.invoke(instance,
                 "simple2D3params",
                 new Class[] { int.class, String.class, String.class },
