@@ -16,33 +16,33 @@ public class SmartDTTest {
 
     @Test
     public void test1() {
-        assertEquals(new Double(0.02),
+        assertEquals(Double.valueOf(0.02),
             TestUtils.invoke(instance, "test1", new Class[] { int.class, String.class }, new Object[] { 2, "v2" }));
-        assertEquals(new Double(0.05),
+        assertEquals(Double.valueOf(0.05),
             TestUtils.invoke(instance, "test1", new Class[] { int.class, String.class }, new Object[] { 5, "v5" }));
     }
 
     @Test
     public void test2() {
-        assertEquals(new Double(0.02),
+        assertEquals(Double.valueOf(0.02),
             TestUtils.invoke(instance, "test2", new Class[] { String.class, int.class }, new Object[] { "v2", 2 }));
-        assertEquals(new Double(0.05),
+        assertEquals(Double.valueOf(0.05),
             TestUtils.invoke(instance, "test2", new Class[] { String.class, int.class }, new Object[] { "v5", 5 }));
     }
 
     @Test
     public void testLookup2D2params() {
-        assertEquals(new Double(0.01),
+        assertEquals(Double.valueOf(0.01),
             TestUtils.invoke(instance,
                 "simple2D2params",
                 new Class[] { int.class, String.class },
                 new Object[] { 1, "v1" }));
-        assertEquals(new Double(0.09),
+        assertEquals(Double.valueOf(0.09),
             TestUtils.invoke(instance,
                 "simple2D2params",
                 new Class[] { int.class, String.class },
                 new Object[] { 3, "v2" }));
-        assertEquals(new Double(0.17),
+        assertEquals(Double.valueOf(0.17),
             TestUtils.invoke(instance,
                 "simple2D2params",
                 new Class[] { int.class, String.class },
@@ -51,22 +51,22 @@ public class SmartDTTest {
 
     @Test
     public void testLookup2D3params() {
-        assertEquals(new Double(0.01),
+        assertEquals(Double.valueOf(0.01),
             TestUtils.invoke(instance,
                 "simple2D3params",
                 new Class[] { int.class, String.class, String.class },
                 new Object[] { 1, "v1", "v1" }));
-        assertEquals(new Double(0.08),
+        assertEquals(Double.valueOf(0.08),
             TestUtils.invoke(instance,
                 "simple2D3params",
                 new Class[] { int.class, String.class, String.class },
                 new Object[] { 2, "v1", "v2" }));
-        assertEquals(new Double(0.15),
+        assertEquals(Double.valueOf(0.15),
             TestUtils.invoke(instance,
                 "simple2D3params",
                 new Class[] { int.class, String.class, String.class },
                 new Object[] { 3, "v2", "v1" }));
-        assertEquals(new Double(0.22),
+        assertEquals(Double.valueOf(0.22),
             TestUtils.invoke(instance,
                 "simple2D3params",
                 new Class[] { int.class, String.class, String.class },
